css and spacing issues

--- a/resources/style/landings/pages/referralhome/_content.scss
+++ b/resources/style/landings/pages/referralhome/_content.scss
@@ -34,9 +34,8 @@
 .ReferralHome-sectionContentCaptionSteps {
     font-weight: 900;
     text-align: center;
-    font-size: 36px;
-    text-transform: uppercase;
-    line-height: 37.5px;
+    font-size: 32px;
+    line-height: 38px;
     @media screen and (max-width: 767px) {
         font-size: 28px;
         line-height: 32.81px;
